--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -53,6 +53,8 @@
         <script src="./assets/js/sidebarmenu.js"></script>
         <!--Custom JavaScript -->
         <script src="./assets/js/custom.min.js"></script>
+        <script src="bower_components/angular-bootstrap-multiselect/dist/angular-bootstrap-multiselect.min.js"></script>
+
         <!--This page JavaScript -->
         <!-- <script src="../../dist/js/pages/dashboards/dashboard1.js"></script> -->
         <!-- Charts js Files -->
